# tours

./: main.py  pyproject.toml  tours.db
data/: base.py  data.py  forms.py  models.py  tours_to_db.py
templates/: _base.html  _navigation.html  departure.html  index.html  tour.html
