[tool.poetry]
name = "tour"
version = "0.1.0"
description = ""
authors = ["WhoouchPlay <stasolenchuk89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
flask = "^3.1.0"
flask-login = "^0.6.3"
flask-wtf = "^1.2.2"
email-validator = "^2.2.0"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
